Copyright (C) 1998-2000 Wilson Snyder.
Copyright (C) 1992-1997 Digital Equipment Corportation.
See the end for copying conditions.

The contributors that suggested a given feature is shown in [].
	
This uses outline mode in Emacs.  See C-h m [M-x describe-mode].

* Changes in Dinotrace 9.0k  7/17/2000

****	Fixed bug with $comment after $enddefinitions. [Harunobu Miyashita]

****	Fixed bug with Tempest signals over 128 bits. [Ta-Chung Chang]
	This bug was introduced in 9.0i.

****	Fixed portability bug with Value Examine showing 0s. [Ta-Chung Chang]


* Changes in Dinotrace 9.0i  5/1/2000

**	Major speed improvement in reading Tempest traces.
	All trace formats now have less processing when building busses from
	individual bits. [Steve Hoover]

***	ASCII traces assume extra time so last line is not lost.
	ASCII traces which had timestamps would not show the last state of the
	bus, as Dinotrace did not guess at how long that last state was valid for.
	Now, it looks at the smallest time step in the trace, and uses that
	as a guess at the timescale. [Pani Kodandapani]

****	Builds on FreeBSD.  [Dan McMahill]


* Changes in Dinotrace 9.0g  1/17/2000

**	Configuration file commands that require times now take times
	with respect to the time_rep value.  Thus if the times are displayed
	in nanoseconds, the config file values are in ns.  This affects
	grid_resolution and grid_align.  Time_goto, resolution and cursor_add
	were already correct.

**	If a common prefix is present on every signal being displayed,
	then that prefix is no longer drawn, though it is still kept inside
	Dinotrace.  Drawing prefixes may be reenabled with a button in the
	Configure window, or with the draw_prefix configuration switch.
	[Dominik Strasser]

***	Value Examine (Mouse Button 2) now shows the value shifted to bit 0,
	if appropriate.  For example [10:3]=1 gets displayed also as [10:0]=8.

****	Fixed tempest files which start with phase b. [Steve Hoover]
